--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "NODE_ENV=test mocha test/**/*.js --exit"
   },
   "dependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "knex": "^0.14.6",
+    "mocha": "^5.2.0",
     "morgan": "~1.9.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "pryjs": "^1.0.3",
+    "request": "^2.87.0"
   }
 }
