Update migrations environment script

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_script:
   - npm install knex
   - psql -c 'create database qs_node' -U postgres
   - psql -c 'create database qs_node_test' -U postgres
-  - knex migrate:latest NODE_ENV=test
+  - NODE_ENV=test knex migrate:latest
