--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "fetch": "^1.1.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jquery": "^3.3.1",
     "knex": "^0.14.6",
     "mocha": "^5.2.0",
     "morgan": "~1.9.0",
+    "node-fetch": "^2.1.2",
     "pg": "^7.4.3",
     "pryjs": "^1.0.3",
     "request": "^2.87.0"
